--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
   "langue.anglais": "English",
 
   "drawer.accueil": "Home",
-  "drawer.listPersonnel": "Employees list",
+  "drawer.listPersonnel": "Music list",
   "drawer.stats": "Statistics",
   "drawer.contact": "Contact"
 }
