--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,7 +4,6 @@
   "langue.anglais": "Anglais",
 
   "drawer.accueil": "Accueil",
-  "drawer.listPersonnel": "Liste du Personnel",
-  "drawer.stats": "Statistiques",
+  "drawer.listPersonnel": "Liste des Musiques",
   "drawer.contact": "Contact"
 }
